create manager
